--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="news_not_found_message">Can\'t find news for that subject.</string>
     <string name="unknown_exception_message">We are working on this issue</string>
     <string name="back_arrow">back arrow</string>
+    <string name="github_repositories">Github Repositories</string>
 </resources>
